src/test/ui/issues/issue-18107.stderr
error[E0746]: return type cannot have an unboxed trait object
  --> $DIR/issue-18107.rs:4:5
   |
LL |     dyn AbstractRenderer
   |     ^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = note: currently nothing is being returned, depending on the final implementation you could change the return type in different ways
   = note: for information on `impl Trait`, see <https://doc.rust-lang.org/book/ch10-02-traits.html#returning-types-that-implement-traits>
   = note: for information on trait objects, see <https://doc.rust-lang.org/book/ch17-02-trait-objects.html#using-trait-objects-that-allow-for-values-of-different-types>
help: you could use some type `T` that is `T: Sized` as the return type if all return paths will have the same type
   |
LL |     T
   |
help: you could use `impl AbstractRenderer` as the return type if all return paths will have the same type but you want to expose only the trait in the signature
   |
LL |     impl AbstractRenderer
   |
help: you could use a boxed trait object if all return paths `impl` trait `AbstractRenderer`
   |
LL |     Box<dyn AbstractRenderer>
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0746`.
